refactor: .toList() 함수로 변경 (#19)